# chroma-rag-solution

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/instructions/: copilot-instructions.md
docker/: docker-compose.yml
docs/: chat_api_design.md
src/api/: __init__.py  app.py  dependencies.py  routes.py
src/components/: __init__.py  chroma_component.py  gemini_chat.py  gemini_embedding.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  chat.py
src/utils/: __init__.py  exceptions.py
tests/: __init__.py  conftest.py  test_chat_api.py  test_chat_settings.py  test_chroma_component.py  test_chroma_integration.py  test_gemini_chat_service.py  test_gemini_embedding.py
