[project]
name = "chroma-rag-solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"google-generativeai>=0.8.0",
	"pydantic>=2.7.0",
	"pydantic-settings>=2.2.1",
]

[dependency-groups]
test = [
	"pytest>=8.2",
]

[tool.pytest.ini_options]
pythonpath = [
	"src",
]
