[project]
name = "chroma-rag-solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"chromadb>=1.1.0",
	"google-generativeai>=0.8.0",
	"pydantic>=2.7.0",
	"pydantic-settings>=2.2.1",
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.30.0",
]

[dependency-groups]
test = [
	"pytest>=8.2",
	"httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = [
	"src",
]
markers = [
	"integration: tests requiring a running Chroma service",
]
